// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<body>
  <div />
  <div>
    👋
  </div>
</body>
`;

exports[`renders the component in a separate container 1`] = `
<body>
  <span>
    <div>
      👋
    </div>
  </span>
  <div />
</body>
`;
